--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Run Streamlit app
         run: |
-          streamlit run --server.port $PORT portfolio.py
+          streamlit run --server.port ${{ secrets.PORT }} portfolio.py
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
