--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,9 +24,12 @@ jobs:
           pip install pipenv
           pipenv install --system --deploy
 
-      - name: Run Streamlit app
+      - name: Set environment variable
+        run: echo "API_KEY=${{ secrets.API_KEY }}" >> $GITHUB_ENV
+
+      - name: Build Streamlit app
         run: |
-          streamlit run --server.port ${{ secrets.PORT }} portfolio.py
+          streamlit build portfolio.py --output-dir docs/
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
